[project]
name = "hpxutils"
version = "0.0.1"
dependencies = [
    "numpy>=1.16",
    "healpy",
    "pytest",
]
readme = "README.md"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint]
select = ["D", "E", "I", "B", "F", "W", "N", "A", "G", "C4", "FLY", "NPY", "UP", "RUF", "TC"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]